--- a/plugins/PrivacyManager/templates/privacySettings.twig
+++ b/plugins/PrivacyManager/templates/privacySettings.twig
@@ -42,14 +42,6 @@
             </div>
         </div>
 
-        <div piwik-field uicontrol="select" name="anonymizeReferrer"
-             ng-model="anonymizeIp.anonymizeReferrer"
-             options='{{ referrerAnonymizationOptions|json_encode|e('html_attr') }}'
-             data-title="{{ 'PrivacyManager_AnonymizeReferrer'|translate|e('html_attr') }}"
-             value="{{ anonymizeIP.anonymizeReferrer }}"
-             inline-help="{{ 'PrivacyManager_PseudonymizeUserIdNote'|translate|e('html_attr') }}<br/><br/><em>{{ 'PrivacyManager_PseudonymizeUserIdNote2'|translate|e('html_attr') }}</em>">
-        </div>
-
         <div piwik-field uicontrol="checkbox" name="anonymizeUserId"
              ng-model="anonymizeIp.anonymizeUserId"
              data-title="{{ 'PrivacyManager_PseudonymizeUserId'|translate|e('html_attr') }}"
@@ -62,6 +54,14 @@
              data-title="{{ 'PrivacyManager_UseAnonymizeOrderId'|translate|e('html_attr') }}"
              value="{{ anonymizeIP.anonymizeOrderId }}"
              inline-help="{{ 'PrivacyManager_AnonymizeOrderIdNote'|translate|e('html_attr') }}">
+        </div>
+
+        <div piwik-field uicontrol="select" name="anonymizeReferrer"
+             ng-model="anonymizeIp.anonymizeReferrer"
+             options='{{ referrerAnonymizationOptions|json_encode|e('html_attr') }}'
+             data-title="{{ 'PrivacyManager_AnonymizeReferrer'|translate|e('html_attr') }}"
+             value="{{ anonymizeIP.anonymizeReferrer }}"
+             inline-help="{{ 'PrivacyManager_AnonymizeReferrerNote'|translate|e('html_attr') }}">
         </div>
 
         <div piwik-save-button onconfirm="anonymizeIp.save()" saving="anonymizeIp.isLoading"></div>
